# husk

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_STRUCTURE.md  LICENSE  NOTICE  PLAN.md  README.md  README_EN.md  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  integration.yml  release.yml  test.yml
daemon/: README.md  go.mod
daemon/cmd/daemon/: main.go
daemon/internal/fs/: fs.go
daemon/internal/proc/: proc.go
daemon/internal/server/: server.go
docker/: Dockerfile  compose.dev.yaml  compose.example.yaml
docs/: compatibility.md  configuration.md  getting-started.md  security.md
docs/archive/: 04-no-runner-plan.md
docs/project/: ARCHITECTURE.md  CHANGELOG.md  PLAN.md
docs/project/archive/: 03-lite-plan.md
docs/project/research/: upstream-apis.md  upstream-features.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/files/: FileBrowser.tsx
frontend/src/lib/: i18n.tsx
frontend/src/locales/: en-US.ts  zh-CN.ts
frontend/src/styles/: globals.css
husk/: main.py
husk/auth/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
husk/cli/: apikey.py  main.py  sandbox.py
husk/core/: config.py  database.py  deps.py  docker_client.py  exceptions.py  logging.py  time.py
husk/health/: router.py
husk/migrations/: env.py
husk/migrations/versions/: 5ac9d16dfed3_initial_schema.py
husk/preview/: dependencies.py  exceptions.py  models.py  proxy.py  router.py  schemas.py  service.py
husk/sandbox/: auto_stop.py  constants.py  daemon_inject.py  dependencies.py  exceptions.py  models.py  netrules.py  reaper.py  repository.py  router.py  schemas.py  service.py  state_machine.py
husk/snapshot/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
husk/stub/: router.py
husk/tasks/: scheduler.py
husk/toolbox/: http_proxy.py  router.py  ws_proxy.py
husk/volume/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
scripts/: build-image.sh  dev.sh  gen-sdk-clients.sh  pull-upstream-daemon.sh
sdks/: README.md
sdks/go/: README.md  go.mod
sdks/go/client/: doc.go
sdks/langchain/: .gitignore  Makefile  README.md  pyproject.toml
sdks/langchain/langchain_husk/: __init__.py  sandbox.py
sdks/langchain/tests/: test_import.py
sdks/langchain/tests/integration_tests/: test_real_husk.py
sdks/langchain/tests/unit_tests/: test_sandbox.py
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: quickstart.py
sdks/python/husk_client/: __init__.py  ergonomic.py
sdks/python/husk_client/_generated/: README.md  __init__.py
sdks/python/tests/: test_ergonomic.py
sdks/typescript/: README.md  package.json  tsconfig.json
sdks/typescript/examples/: quickstart.ts
sdks/typescript/src/: index.ts
tests/: conftest.py
tests/integration/: test_sandbox_lifecycle.py
tests/unit/: test_smoke.py
tests/unit/auth/: test_service.py
tests/unit/preview/: test_service.py
tests/unit/sandbox/: conftest.py  test_service.py  test_state_machine.py
(+50 files in other folders)
