[project]
name = "husk"
version = "0.0.1"
description = "Lightweight AI code sandbox runtime"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Husk Contributors" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "docker>=7.1",
    "httpx>=0.27",
    "websockets>=13",
    "python-jose[cryptography]>=3.3",
    "argon2-cffi>=23",
    "typer>=0.12",
    "loguru>=0.7",
    "rich>=15.0.0",
    "attrs>=26.1.0",
    "openai>=2.43.0",
    "deepagents>=0.6.11",
    "pip>=26.1.2",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]

[project.scripts]
husk = "husk.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "testcontainers>=4.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "respx>=0.23.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["husk"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
# B008: FastAPI uses `= Depends(...)` as default argument — idiomatic
# N818: HTTP-style exception names (NotFound/Conflict/Unauthorized) — idiomatic
ignore = ["E501", "B008", "N818"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
