[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-husk"
description = "Husk sandbox integration for Deep Agents"
license = { text = "MIT" }
readme = "README.md"

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

version = "0.0.1"
requires-python = ">=3.11,<4.0"
dependencies = [
    "deepagents>=0.6.8,<0.7.0",
    "husk-client>=0.0.1",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["langchain_husk"]

[project.urls]
Homepage = "https://github.com/husklabs/langchain-husk"
Repository = "https://github.com/husklabs/langchain-husk"
Issues = "https://github.com/husklabs/langchain-husk/issues"

[dependency-groups]
test = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov",
    "pytest-socket",
    "pytest-timeout>=2.4.0,<3.0.0",
    "ruff>=0.15.0,<1.0.0",
    "respx>=0.21.0",
]

[tool.uv.sources]
deepagents = { path = "../deepagents/libs/deepagents", editable = true }
husk-client = { path = "../husk/sdks/python", editable = true }

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
